.k8s/sunedoes.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sunedoes-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /sune-does/
        pathType: Prefix
        backend:
          service:
            name: sunedoes
            port: 
              number: 80

  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sunedoes
            port: 
              number: 80
              
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-myserviceb
# spec:
#   rules:
#   - host: myserviceb.foo.org
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: myserviceb
#             port:
#               number: 80
#   ingressClassName: nginx
